--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,58 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="title" content="Front-end developer Deimantas Butėnas" />
+    <meta
+      name="description"
+      content="Portfolio website of a front-end developer Deimantas Butėnas."
+    />
+    <meta
+      name="keywords"
+      content="deimantas butėnas, deimantas butenas, web development, frontend, front-end, front end, front end development, front end developer, portfolio, design, web design, vue, typescript, javascript, html, css, scss, sass, git, aws"
+    />
+    <link rel="canonical" href="https://www.deimantasb.com/" />
+  
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.deimantasb.com/" />
+    <meta
+      property="og:title"
+      content="Front-end developer Deimantas Butėnas"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio website of a front-end developer Deimantas Butėnas where you can see his work!"
+    />
+    <meta
+      property="og:image"
+      content="https://www.deimantasb.com/meta-image.png"
+    />
+  
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://www.deimantasb.com/" />
+    <meta
+      property="twitter:title"
+      content="Frontend developer Deimantas Butėnas"
+    />
+    <meta
+      property="twitter:description"
+      content="Portfolio website of a front-end developer Deimantas Butėnas where you can see his work!"
+    />
+    <meta
+      property="twitter:image"
+      content="https://www.deimantasb.com/meta-image.png"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Deimantas Butėnas - OpenSea NFT Explorer</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but this website doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
