--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <title>Deimantas Butėnas - OpenSea NFT Explorer</title>
   </head>
   <body>
